--- a/LiveNet.html
+++ b/LiveNet.html
@@ -2,7 +2,7 @@
    CONTRACT_ADDRESS = ""
    IS_TESTNET = false
    MAX_PER_MINT = 0
-   CONTRACT_ABI = [{...}]
+   CONTRACT_ABI = ""
  
 </script>
 
